profiles/jim/src/index.css
.Jim .chat-header {
	text-align: center;
	padding: 10px 17px;
	text-align: center;
	background-color: #0078fd;
	color: #fff;
	border-radius: 2px 2px 0 0;
	box-shadow: 0 0 20px 0 #495057;
    position: relative;
    z-index: 1;
}
.Jim .chat-header h3 {
    margin: 0;
    font-size: 25px;
}

.conversation {
	background-color: #e9ecef;
    height: calc(100vh - 150px);
}

.chat-messages {
    padding: 30px 30px 0;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.msg .avatar {
    width: 40px;
    position: absolute;
    left: -45px;
    top: -15px;
}

.msg {
    padding: 10px 20px;
    border: 1px solid;
    margin-bottom: 32px;
    max-width: 60%;
}
.msg .text {
	margin: 0;
	line-height: 1.1;
    font-size: 17px;
    font-family: Arial, sans-serif;
}
.msg-guest {
	margin-left: auto;
	border-radius: 10px 20px 0 10px;
	background-color: rgba(0, 77, 160, 0.59);
    border-color: rgba(11, 127, 253, 0.5);
    color: #fff;
}
.msg-jimie {
	margin-right: auto;
	border-radius: 0 10px 10px 20px;
	background-color: #fff;
	border-color: #dee2e6;
    position: relative;
    margin-left: 40px;
}

.msg-guest + .msg-guest, .msg-jimie + .msg-jimie {
    margin-top: -30px;
    border-radius: 10px;
}

.editor {
	display: flex;
}

.chat-input {
    display: block;
    width: 100%;
    height: 50px;
    padding: 15px;
    font-size: 16px;
    border: 1px solid #ddd;
}
.chat-input:focus {
    outline: 0;
    background-color: #f7f7f7;
}

.chat-input:focus + .send-btn:before {
    border-top-color: #f7f7f7;
}

.chat-input::placeholder {
	color: #ccc; 
}

.send-btn {
    background-color: #7683c0;
    color: #fff;
    font-size: 20px !important;
    padding: 5px 20px 5px 40px !important;
    transition: none;
    outline: 0 !important;
    position: relative;
    border: 1px solid #ddd;
    border-right: 0;
}
.send-btn:before {
    content: '';
    border-top: 50px solid #fff;
    border-right: 42px solid transparent;
    position: absolute;
    top: 0;
    left: -2px;
}
.send-btn:focus {
	outline: 0;
	box-shadow: none;
}

